# ros2-gesture-controlled-robot

./: .env  README.md  camera.py  keypoint_classifier.ipynb  main.py  requirements.txt
model/keypoint_classifier/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.py  keypoint_classifier.tflite
ros_ws/src/simple_robot_description/: package.xml  setup.py
ros_ws/src/simple_robot_description/config/: arm_1dof.yaml  robot.yaml
ros_ws/src/simple_robot_description/launch/: gazebo.launch.py
ros_ws/src/simple_robot_description/models/arm_1dof/: arm_1dof.urdf  arm_1dof.xacro  joints.xacro  model.config
ros_ws/src/simple_robot_description/models/robot/: model.config  robot.gazebo.xacro  robot.urdf  robot.xacro
ros_ws/src/simple_robot_description/simple_robot_description/: gesture_detection.py  joint_commander.py  robot_controller.py
ros_ws/src/simple_robot_description/simple_robot_description/gesture_model/: __init__.py  keypoint_classifier.py  keypoint_classifier_label.csv
